Add publisher entity ORM and implements a CRUD operation for this entity